# AstroFaker

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  Jenkinsfile  LICENSE.rst  LICENSE.txt  README.md  README.rst  __init__.py  astrofaker.py  f2.py  fake_it.py  gmos.py  gnirs.py  gsaoi.py  niri.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
astrofaker/: __init__.py  _version.py  astrofaker.py  f2.py  gmos.py  gnirs.py  gsaoi.py  niri.py
astrofaker/tests/: test_gmos.py
doc/: classes.rst  functions.rst  index-latex.rst  index.rst  intro.rst  methods.rst  overview.rst  test_examples.rst
docs/: classes.rst  conf.py  index-latex.rst  methods.rst  overview.rst
src/astrofaker/: __init__.py  astrofaker.py  f2.py  fake_it.py  gmos.py  gnirs.py  gsaoi.py  niri.py
src/astrofaker/tests/: conftest.py
